--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ html {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    background-color: #DFAA5B;
+    background-color: red;
     padding: 24px 52px;
     border-radius: 10px;
     width: 244px;
@@ -749,3 +749,4 @@ html {
     margin-top: 68px;
     margin-bottom: 104px;
 }
+
