--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ html {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    background-color: red;
+    background-color: #DFAA5B;
     padding: 24px 52px;
     border-radius: 10px;
     width: 244px;
